# ImageProcessor

./: .gitignore  CMakeLists.txt  Makefile  README.md
AddIn/: AddInNative.cpp  CMakeLists.txt
examples/: CMakeLists.txt  bmpResamplingByHeight.cpp  drawText.cpp  jpegResamplingByWeightAndHeight.cpp  pngToGrayscale.cpp  pngToNegative.cpp
include/: MANIFEST.xsd  addin.idl  com.h  image.h  types.h
include/image_processor/: image.h  image_loader.h
include/image_processor/loaders/: bmp_loader.h
include/image_processor/processors/: resampling_processor.h
include/loaders/: jpeg_loader.h  png_loader.h
include/processors/: color_processor.h  resampling_processor.h
include/text_renderer/: text_renderer.h
lib/: VerInfo.txt
lib/1CEAdnWebNPAPISafOSX.bundle/Contents/: Info.plist
project_lib/: CMakeLists.txt
project_lib/src/: main
project_lib/src/main.dSYM/Contents/Resources/DWARF/: main
project_lib/src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
scripts/: build.sh  clean.sh
src/: CMakeLists.txt  image.cpp
src/loaders/: bmp_loader.cpp  jpeg_loader.cpp  png_loader.cpp
src/processors/: color_processor.cpp  resampling_processor.cpp
src/text_renderer/: text_renderer.cpp
tests/: CMakeLists.txt  test_color.cpp  test_common.h  test_image.cpp  test_load.cpp  test_resampling.cpp  test_save.cpp  test_text.cpp
